cabal-version: 3.0

author: Mitchell Rosen
bug-reports: https://github.com/mitchellwrosen/libzmq/issues
category: FFI
copyright: Copyright (C) 2023 Mitchell Rosen
homepage: https://github.com/mitchellwrosen/libzmq
license: BSD-3-Clause
license-file: LICENSE
maintainer: Mitchell Rosen <mitchellwrosen@gmail.com>
name: libzmq-bindings
synopsis: zeromq 4.3.4 bindings
tested-with: GHC == 9.2.7, GHC == 9.4.4, GHC == 9.6.1
version: 4.3.4.0

description:
  Complete bindings to @zeromq 4.3.4@. To build use this library, you must provide an environment in which @pkg-config@
  can locate @zeromq 4.3.4@ built with /DRAFT/ API support.

  Because the underlying @zeromq@ library has a version number of its own, this library does __not__ follow the Package
  Versioning Policy:

    * The first three version numbers correspond exactly to the underlying @zeromq@ version number.
    * The fourth version number begins at 0 and gets bumped for any reason whatsoever (dependency bounds adjustment,
      bugfix, etc).

  Users who want the latest version of this library that is compatible with @zeromq X.Y.Z@ should therefore add the
  following to their @build-depends@ section:

    > build-depends: libzmq-bindings == X.Y.Z.*

  Otherwise, users should depend on a specific version of this library:

    > build-depends: libzmq-bindings == X.Y.Z.Q

extra-source-files:
  CHANGELOG.md
  cbits/zmq-wrapper.c
  cbits/zmq-wrapper.h

source-repository head
  type: git
  location: https://github.com/mitchellwrosen/libzmq.git
  subdir: libzmq-bindings

library
  build-depends:
    base ^>= 4.16 || ^>= 4.17 || ^>= 4.18,
  build-tool-depends: hsc2hs:hsc2hs ^>= 0.68
  c-sources: cbits/zmq-wrapper.c
  default-extensions:
    BlockArguments
    CApiFFI
    DerivingStrategies
    InterruptibleFFI
    PatternSynonyms
    ViewPatterns
  default-language: GHC2021
  exposed-modules:
    Libzmq.Bindings
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-safe
    -Wno-unsafe
  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures
  hs-source-dirs: src
  include-dirs: cbits
  includes: zmq-wrapper.h
  install-includes: zmq-wrapper.h
  other-modules:
    Libzmq.Bindings.Internal.Constants
    Libzmq.Bindings.Internal.Constants2
    Libzmq.Bindings.Internal.Functions
    Libzmq.Bindings.Internal.Types
  if os(windows)
    extra-libraries: zmq
  else
    pkgconfig-depends: libzmq == 4.3.4
